Invariant failure when dropping collection during chunk split

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Dropping a collection during a chunk split can trigger an invariant failure in splitChunk code. In 2.6.7, the same scenario triggers a non-fatal verify() failure.

      Invariant failure collection src/mongo/s/d_split.cpp 850
      
      #0  0x00007f210fe1820b in raise (sig=5) at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c:37
      #1  0x00000000018d5334 in mongo::breakpoint () at src/mongo/util/debugger.cpp:63
      #2  0x00000000018ca1a5 in mongo::invariantFailed (expr=0x203dc34 "collection", file=0x203e619 "src/mongo/s/d_split.cpp", line=850) at src/mongo/util/assert_util.cpp:147
      #3  0x00000000017e6cb1 in mongo::SplitChunkCommand::run (this=0x28913c0 <mongo::cmdSplitChunk>, txn=0x7f20e7e207d0, dbname=..., cmdObj=..., errmsg=..., result=..., fromRepl=false) at src/mongo/s/d_split.cpp:850
      #4  0x000000000133b06f in mongo::_execCommand (txn=0x7f20e7e207d0, c=0x28913c0 <mongo::cmdSplitChunk>, dbname=..., cmdObj=..., queryOptions=0, errmsg=..., result=..., fromRepl=false) at src/mongo/db/dbcommands.cpp:1295
      #5  0x000000000133c03d in mongo::Command::execCommand (txn=0x7f20e7e207d0, c=0x28913c0 <mongo::cmdSplitChunk>, queryOptions=0, cmdns=0x7e8b814 "admin.$cmd", cmdObj=..., result=..., fromRepl=false) at src/mongo/db/dbcommands.cpp:1511
      #6  0x000000000133c92e in mongo::_runCommands (txn=0x7f20e7e207d0, ns=0x7e8b814 "admin.$cmd", _cmdobj=..., b=..., anObjBuilder=..., fromRepl=false, queryOptions=0) at src/mongo/db/dbcommands.cpp:1583
      #7  0x000000000154225c in mongo::runCommands (txn=0x7f20e7e207d0, ns=0x7e8b814 "admin.$cmd", jsobj=..., curop=..., b=..., anObjBuilder=..., fromRepl=false, queryOptions=0) at src/mongo/db/query/find.cpp:137
      #8  0x00000000015442a2 in mongo::runQuery (txn=0x7f20e7e207d0, m=..., q=..., nss=..., curop=..., result=..., fromDBDirectClient=false) at src/mongo/db/query/find.cpp:606
      #9  0x0000000001448c35 in mongo::receivedQuery (txn=0x7f20e7e207d0, c=..., dbresponse=..., m=..., fromDBDirectClient=false) at src/mongo/db/instance.cpp:220
      #10 0x0000000001449de3 in mongo::assembleResponse (txn=0x7f20e7e207d0, m=..., dbresponse=..., remote=..., fromDBDirectClient=false) at src/mongo/db/instance.cpp:403
      #11 0x0000000001142274 in mongo::MyMessageHandler::process (this=0x3e720f8, m=..., port=0x41b7db0, le=0x7e1cd20) at src/mongo/db/db.cpp:206
      #12 0x00000000018f343a in mongo::PortMessageServer::handleIncomingMsg (arg=0x41b7db0) at src/mongo/util/net/message_server_port.cpp:229
      #13 0x00007f210fe10182 in start_thread (arg=0x7f20e7e21700) at pthread_create.c:312
      #14 0x00007f210ef1100d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
      

            Assignee:
            Randolph Tan
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: