SERVER-17246 Invariant failure when dropping collection during chunk split